<resources>
    <string name="CronetProviderClassName" translatable="false">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="ad">Ad</string>
    <string name="ad_units">Ad Units</string>
    <string name="ads_sdk_version">SDK Version</string>
    <string name="advertisement_network_settings">Advertisement Network Settings</string>
    <string name="age_restricted_user">Age Restricted User</string>
    <string name="al_exo_controls_cc_disabled_description">Enable subtitles</string>
    <string name="al_exo_controls_cc_enabled_description">Disable subtitles</string>
    <string name="al_exo_controls_custom_playback_speed">%1$.2fx</string>
    <string name="al_exo_controls_fastforward_description">Fast forward</string>
    <string name="al_exo_controls_fullscreen_enter_description">Enter fullscreen</string>
    <string name="al_exo_controls_fullscreen_exit_description">Exit fullscreen</string>
    <string name="al_exo_controls_hide">Hide player controls</string>
    <string name="al_exo_controls_next_description">Next</string>
    <string name="al_exo_controls_overflow_hide_description">Hide additional settings</string>
    <string name="al_exo_controls_overflow_show_description">Show additional settings</string>
    <string name="al_exo_controls_pause_description">Pause</string>
    <string name="al_exo_controls_play_description">Play</string>
    <string name="al_exo_controls_playback_speed">Speed</string>
    <string name="al_exo_controls_playback_speed_normal">Normal</string>
    <string name="al_exo_controls_previous_description">Previous</string>
    <string name="al_exo_controls_repeat_all_description">Repeat all</string>
    <string name="al_exo_controls_repeat_off_description">Repeat none</string>
    <string name="al_exo_controls_repeat_one_description">Repeat one</string>
    <string name="al_exo_controls_rewind_description">Rewind</string>
    <string name="al_exo_controls_seek_bar_description">Playback progress</string>
    <string name="al_exo_controls_settings_description">Settings</string>
    <string name="al_exo_controls_show">Show player controls</string>
    <string name="al_exo_controls_shuffle_off_description">Shuffle off</string>
    <string name="al_exo_controls_shuffle_on_description">Shuffle on</string>
    <string name="al_exo_controls_stop_description">Stop</string>
    <string name="al_exo_controls_time_placeholder">00:00:00</string>
    <string name="al_exo_controls_vr_description">VR mode</string>
    <string name="al_exo_download_completed">Download completed</string>
    <string name="al_exo_download_description">Download</string>
    <string name="al_exo_download_downloading">Downloading</string>
    <string name="al_exo_download_failed">Download failed</string>
    <string name="al_exo_download_notification_channel_name">Downloads</string>
    <string name="al_exo_download_paused">Downloads paused</string>
    <string name="al_exo_download_paused_for_network">Downloads waiting for network</string>
    <string name="al_exo_download_paused_for_wifi">Downloads waiting for WiFi</string>
    <string name="al_exo_download_removing">Removing downloads</string>
    <string name="al_exo_item_list">%1$s, %2$s</string>
    <string name="al_exo_track_bitrate">%1$.2f Mbps</string>
    <string name="al_exo_track_mono">Mono</string>
    <string name="al_exo_track_resolution">%1$d × %2$d</string>
    <string name="al_exo_track_role_alternate">Alternate</string>
    <string name="al_exo_track_role_closed_captions">CC</string>
    <string name="al_exo_track_role_commentary">Commentary</string>
    <string name="al_exo_track_role_supplementary">Supplementary</string>
    <string name="al_exo_track_selection_auto">Auto</string>
    <string name="al_exo_track_selection_none">None</string>
    <string name="al_exo_track_selection_title_audio">Audio</string>
    <string name="al_exo_track_selection_title_text">Text</string>
    <string name="al_exo_track_selection_title_video">Video</string>
    <string name="al_exo_track_stereo">Stereo</string>
    <string name="al_exo_track_surround">Surround sound</string>
    <string name="al_exo_track_surround_5_point_1">5.1 surround sound</string>
    <string name="al_exo_track_surround_7_point_1">7.1 surround sound</string>
    <string name="al_exo_track_unknown">Unknown</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="api_level">API Level</string>
    <string name="app_name">J Cinema App</string>
    <string name="app_review_status">App Review Status</string>
    <string name="app_version">App Version</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_info">Application Info</string>
    <string name="applovin_agree_message">Please press \"Continue\" if you choose to start using our app.</string>
    <string name="applovin_alt_privacy_policy_text" />
    <string name="applovin_continue_button_text">Continue</string>
    <string name="applovin_creative_debugger_disabled_text">Enable the Creative Debugger SDK settings in order to view recent ads.</string>
    <string name="applovin_creative_debugger_no_ads_text">No recently displayed ads found.</string>
    <string name="applovin_list_item_image_description">Displays more info about the list item.</string>
    <string name="applovin_pp_and_tos_title">To use %s you must agree to our Terms &amp; Conditions and affirm you have reviewed our Privacy Policy</string>
    <string name="applovin_pp_title">To use %s you must affirm that you have reviewed and acknowledged our Privacy Policy.</string>
    <string name="applovin_privacy_policy_text">Privacy Policy</string>
    <string name="applovin_terms_of_service_text">Terms &amp; Conditions</string>
    <string name="applovin_terms_of_use_text">Terms of Use</string>
    <string name="bigo_ad_about_app_default">About this app</string>
    <string name="bigo_ad_click_to_try">Click to try?</string>
    <string name="bigo_ad_comment_num_text">Reviews</string>
    <string name="bigo_ad_cta_default">View more</string>
    <string name="bigo_ad_cta_download_default">Install</string>
    <string name="bigo_ad_description_default">Free access now!</string>
    <string name="bigo_ad_double_video_choose_video">Choose your favorite video</string>
    <string name="bigo_ad_double_video_count_down">Auto-play in %ds</string>
    <string name="bigo_ad_download_num_text">Downloads</string>
    <string name="bigo_ad_feedback_copied">Ad ERID copied</string>
    <string name="bigo_ad_feedback_copy_ad_id">ERID: %s</string>
    <string name="bigo_ad_feedback_hide_ads">Hide ADs</string>
    <string name="bigo_ad_feedback_report_ads">Report ADs</string>
    <string name="bigo_ad_feedback_why_this_ad">Why can I see this AD?</string>
    <string name="bigo_ad_ic_application">Application</string>
    <string name="bigo_ad_ic_blank">%s</string>
    <string name="bigo_ad_ic_everyone">Everyone</string>
    <string name="bigo_ad_ic_recommended">Recommended</string>
    <string name="bigo_ad_ic_web">Web</string>
    <string name="bigo_ad_lose_reward">You will lose your reward.</string>
    <string name="bigo_ad_multi_img_more_text">MORE</string>
    <string name="bigo_ad_resume">Resume</string>
    <string name="bigo_ad_skip">Skip</string>
    <string name="bigo_ad_skip_video">Skip video?</string>
    <string name="bigo_ad_splash_skip">SKIP</string>
    <string name="bigo_ad_tag_back">bigo_ad_tag_back</string>
    <string name="bigo_ad_tag_close">bigo_ad_tag_close</string>
    <string name="bigo_ad_tag_progressbar">bigo_ad_tag_progressbar</string>
    <string name="bigo_ad_tag_title">bigo_ad_tag_title</string>
    <string name="bigo_ad_title_default">Fantastic and interesting</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="button_ok">Exit</string>
    <string name="campaign.appName">getAppName</string>
    <string name="campaign.iconUrl">getIconUrl</string>
    <string name="campaign.imageUrl">getImageUrl</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="click_check_video">Click to view the complete version</string>
    <string name="str_album">Photo Album</string>
    <string name="str_detail_share">Share for no ads</string>
    <string name="str_dialog_cling_empt">No screencasting device found?</string>
    <string name="str_dialog_cling_empt_tip">The TV or box needs to be connected to the same WIFI as your phone.</string>
    <string name="str_dialog_cling_seaching">Device is searching...</string>
    <string name="str_dialog_cling_tip">After selecting the device, the current video will be cast to the TV for playback.</string>
    <string name="str_dialog_cling_title">Please select a screencasting device</string>
    <string name="str_look_ad">Watch ads</string>
    <string name="str_lookad_tip">You need to watch an ad to unlock free movies</string>
    <string name="str_lookad_tip2">Ads are for free forever</string>
    <string name="str_photo">Photograph</string>
    <string name="text_agreement">Register and log in to agree</string>
    <string name="text_cannel">Cancel</string>
    <string name="text_login_forget_password">Forget the password</string>
    <string name="text_login_login">Login</string>
    <string name="text_login_password">Please enter the password</string>
    <string name="text_login_register">Registration</string>
    <string name="text_login_username">Please enter your account</string>
    <string name="text_user_and">and</string>
    <string name="text_user_privacy">Privacy Policy</string>
</resources>