<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:background="@drawable/ic_video_load_first_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/sp_14"
            android:textColor="@color/exo_exo_video_switch_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_lookad_tip"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:textSize="@dimen/sp_11"
            android:textColor="#ff999999"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/str_lookad_tip2"
            android:layout_centerHorizontal="true"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="@dimen/sp_12"
                android:textColor="@color/exo_exo_video_switch_selector"
                android:gravity="center"
                android:id="@+id/iv_ad_click_player"
                android:background="@drawable/bg_empty_refresh"
                android:layout_width="@dimen/dp_130"
                android:layout_height="@dimen/dp_32"
                android:text="@string/str_look_ad"/>
            <TextView
                android:textSize="@dimen/sp_12"
                android:textColor="@color/color_commen"
                android:gravity="center"
                android:id="@+id/iv_ad_share_click_player"
                android:background="@drawable/bg_ad_extension_share"
                android:layout_width="@dimen/dp_162"
                android:layout_height="@dimen/dp_32"
                android:layout_marginLeft="@dimen/dp_10"
                android:text="@string/str_detail_share"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
