<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="bottom"
    android:orientation="vertical"
    android:id="@+id/ll_top"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="@dimen/sp_13"
        android:textColor="@color/color_text_commen1"
        android:gravity="center"
        android:id="@+id/tv_photo"
        android:background="@drawable/bg_edit_mine_pop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:text="@string/str_album"/>
    <View
        android:background="@color/color_actionbar_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_5"/>
    <TextView
        android:textSize="@dimen/sp_13"
        android:textColor="@color/color_text_commen1"
        android:gravity="center"
        android:id="@+id/tv_camera"
        android:background="@color/color_home_but_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:text="@string/str_photo"/>
    <View
        android:background="@color/color_actionbar_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_5"/>
    <TextView
        android:textSize="@dimen/sp_13"
        android:textColor="@color/color_text_commen1"
        android:gravity="center"
        android:id="@+id/tv_cancel"
        android:background="@color/color_home_but_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_59"
        android:text="@string/text_cannel"/>
</LinearLayout>
