<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="layout/activity_login_0"
    android:background="@color/theme_bg_color"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/iv_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_60"
        android:src="@drawable/ic_login_logo"
        android:layout_centerHorizontal="true"/>
    <ImageView
        android:tag="binding_1"
        android:paddingLeft="@dimen/dp_18"
        android:paddingTop="@dimen/dp_11"
        android:paddingRight="@dimen/dp_18"
        android:paddingBottom="@dimen/dp_18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_video_back"/>
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_45"
        android:layout_below="@+id/iv_top">
        <com.mgs.carparking.widgets.ClearableEditText
            android:textSize="@dimen/sp_13"
            android:textColor="@color/color_text_commen1"
            android:textColorHighlight="@color/color_999999"
            android:textColorHint="@color/color_999999"
            android:gravity="center_vertical"
            android:id="@+id/et_username"
            android:tag="binding_2"
            android:background="@drawable/shape_login_edit"
            android:paddingLeft="@dimen/dp_15"
            android:paddingRight="@dimen/dp_15"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="@dimen/dp_308"
            android:layout_height="@dimen/dp_42"
            android:hint="@string/text_login_username"
            android:singleLine="true"
            android:selectAllOnFocus="true"
            android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
            android:layout_centerInParent="true"
            android:textCursorDrawable="@drawable/search_color_cursor"/>
        <RelativeLayout
            android:layout_width="@dimen/dp_308"
            android:layout_height="@dimen/dp_42"
            android:layout_marginTop="@dimen/dp_12">
            <EditText
                android:textSize="@dimen/sp_13"
                android:textColor="@color/color_text_commen1"
                android:textColorHint="@color/color_999999"
                android:id="@+id/et_password"
                android:tag="binding_3"
                android:background="@drawable/shape_login_edit"
                android:paddingLeft="@dimen/dp_15"
                android:paddingRight="@dimen/dp_15"
                android:layout_width="@dimen/dp_308"
                android:layout_height="@dimen/dp_42"
                android:hint="@string/text_login_password"
                android:maxLength="20"
                android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/search_color_cursor"/>
            <ImageView
                android:id="@+id/iv_password"
                android:tag="binding_4"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_15"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_login_password_hint"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <Button
            android:enabled="false"
            android:textSize="@dimen/sp_17"
            android:textStyle="bold"
            android:textColor="@color/color_text_commen1"
            android:id="@+id/bt_submit"
            android:tag="binding_5"
            android:background="@drawable/shape_login_submit_no_click"
            android:layout_width="@dimen/dp_308"
            android:layout_height="@dimen/dp_42"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/text_login_login"
            android:textAllCaps="false"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_21"
            android:layout_marginTop="@dimen/dp_13"
            android:layout_marginRight="@dimen/dp_21">
            <TextView
                android:textSize="@dimen/sp_12"
                android:textColor="@color/color_ffe93c"
                android:gravity="center"
                android:tag="binding_6"
                android:padding="@dimen/dp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_login_register"/>
            <TextView
                android:textSize="@dimen/sp_12"
                android:textColor="@color/color_text_commen1"
                android:gravity="center"
                android:tag="binding_7"
                android:padding="@dimen/dp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_login_forget_password"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_alignParentBottom="true">
        <TextView
            android:textSize="@dimen/sp_12"
            android:typeface="serif"
            android:textColor="@color/color_666666"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_agreement"/>
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="@dimen/sp_12"
                android:typeface="serif"
                android:textColor="@color/color_666666"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:text="@string/text_user_and"
                android:layout_marginHorizontal="3dp"/>
            <TextView
                android:textSize="@dimen/sp_12"
                android:typeface="serif"
                android:textColor="@color/color_commen"
                android:id="@+id/login_user_privacy"
                android:tag="binding_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_user_privacy"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
