<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bg_video_comment_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/sp_15"
            android:textStyle="bold"
            android:textColor="@color/color_text_commen1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:text="@string/str_dialog_cling_title"
            android:layout_centerInParent="true"/>
        <TextView
            android:textSize="@dimen/sp_13"
            android:textColor="@color/color_42BD56"
            android:id="@+id/tv_help"
            android:padding="@dimen/dp_9"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:text="投屏贴士"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <View
        android:background="@color/color_actionbar_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_5"
        android:layout_marginBottom="@dimen/dp_9"/>
    <RelativeLayout
        android:padding="@dimen/dp_9"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_200"
        android:minHeight="@dimen/dp_200">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="@dimen/sp_12"
            android:textColor="@color/color_666666"
            android:layout_gravity="center"
            android:id="@+id/tv_tig"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_dialog_cling_tip"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"/>
        <RelativeLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:id="@+id/ll_loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/iv_loading"
                    android:layout_width="@dimen/dp_25"
                    android:layout_height="@dimen/dp_25"
                    android:src="@drawable/ic_video_lelink_loading"/>
                <TextView
                    android:textSize="@dimen/sp_13"
                    android:textColor="@color/color_666666"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:text="@string/str_dialog_cling_seaching"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/llEmpty"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">
                <TextView
                    android:textSize="@dimen/sp_12"
                    android:textColor="@color/color_666666"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_dialog_cling_empt"
                    android:layout_centerInParent="true"/>
                <TextView
                    android:textSize="@dimen/sp_12"
                    android:textColor="@color/color_666666"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_4"
                    android:text="@string/str_dialog_cling_empt_tip"
                    android:layout_centerInParent="true"/>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
    <View
        android:background="@color/color_actionbar_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_5"/>
    <TextView
        android:textSize="@dimen/sp_15"
        android:textColor="@color/color_text_commen1"
        android:gravity="center"
        android:id="@+id/tv_Cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:text="@string/text_cannel"/>
</LinearLayout>
